--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@ionic/angular": "^7.8.6",
     "crypto-js": "^4.1.1",
     "ionicons": "^7.0.0",
